--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Monash Academic Events</title>
+  <title>Monash Academic Events 2025</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Header with Title and Key on the same row (responsive) -->
   <div class="header">
-    <h1>Monash Academic Events</h1>
+    <h1>Monash Academic Events 2025</h1>
     <div id="legend">
       <ul>
         <li>
